[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://UI/GameOverScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/SettingsScreen.tscn" type="PackedScene" id=4]

[node name="Screens" type="Node"]
script = ExtResource( 1 )

[node name="SettingsScreen" parent="." instance=ExtResource( 4 )]
offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="GameOverScreen" parent="." instance=ExtResource( 2 )]
offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="TitleScreen" parent="." instance=ExtResource( 3 )]
offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )
